package com.inicio.tren;

public enum ClaseSilla {
    ECONOMICA,
    EJECUTIVA
}
