package com.inicio.tren;

public enum PosicionSilla {
    VENTANA,
    PASILLO,
    CENTRO
}
