@startuml
'https://plantuml.com/class-diagram
left to right direction
' Horizontal lines: -->, <--, <-->
' Vertical lines: ->, <-, <->
title Reserva de Trenes


class Tren {
- id : int
- conductor:Persona
- numEconomicas : int
- numEjecutivas : int
- numSillasFila : int
- sillas: ArrayList<Silla>
- reservas : ArrayList<Reserva>
+ crearReserva() :  silla
+ eliminarReserva ():  boolean
+ buscarPasajero() :  pasajero
+ consultarReserva(): Cedula
+ calcularOcupacion() :  double
}

class Reserva {
-id : int
-pasajero : Pasajero
- silla : Silla
}

class Silla {
- id : String
- clase : ClaseSilla
- posicion : PosicionSilla
- fila : int
- ocupada : boolean
}
class Persona {
- id : int
- nombre : String
}
class Pasajero {

}


enum PosicionSilla{
VENTANA
PASILLO

}
enum ClaseSilla{
ECONOMICA
EJECUTIVA
}


Tren "1 " o-- " 100" Reserva
Tren "1 " *-- " 100" Silla
Tren "1 " o. " 1" Persona
Reserva -- Pasajero
Pasajero <- Persona
Silla  -  Reserva
Silla  --  PosicionSilla
Silla  -- ClaseSilla



@enduml